[package]
name = "harmonic-particle-ebm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.16.0", features = ["ndarray", "autodiff"] }
burn-autodiff = "0.16.0"
burn-cuda = { version = "0.16.0", optional = true }
ndarray = "0.16.1"
rand = "0.9.0"
ndarray-npy = "0.9.1"
anyhow = "1.0.97"
rayon = "1.10.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
cuda = ["dep:burn-cuda"]
